...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sdE-8c-JJO" userLabel="Like Button">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="TdL-nv-CnJ"/>
                                                        <constraint firstAttribute="width" constant="44" id="ldh-lZ-Nav"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="hfh-sA-qMm" eventType="touchUpInside" id="KjA-SN-Gmt"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VjE-u3-q1K" userLabel="ButtonBack">
                                <rect key="frame" x="8" y="56" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="TS3-9s-WUz"/>
                                    <constraint firstAttribute="height" constant="48" id="s4X-c1-IbM"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                                    <constraint firstAttribute="height" constant="60" id="eyE-4k-9e9"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tg0-jA-gUG">
                                <rect key="frame" x="16" y="656" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Войти"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="UoG-PD-GTn"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP Black (iOS)"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
            </objects>
            <point key="canvasLocation" x="-1172" y="-1917"/>
        </scene>
        <!--Web View View Controller-->
        <scene sceneID="fkf-Vr-qu7">
            <objects>
                <viewController storyboardIdentifier="UnsplashWebView" id="6QP-Sl-szq" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="6eY-MT-dh5">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aHX-do-Gso">
                                <rect key="frame" x="0.0" y="150" width="414" height="746"/>
...
